--- a/Chemistry.css
+++ b/Chemistry.css
@@ -1,15 +1,33 @@
 body {
-	background-color: rgb(225,225,225)
+	background-color: rgb(225,225,225);
+	background-image: url('geo.png');
+	background-size: 100% 100%;
 }
 
 h1, h3 {
 	text-align: center;
-	margin: 70px;
+	margin: 40px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: green;
+	border: 2px solid black;
+	width: 25%;
+	border-radius: 15px 50px;
 }
 
-div, p {
+p {
 	text-align: center;
+	background-color: green;
+	margin-left: auto;
+	margin-right: auto;
+	border: 2px solid black;
+	width: 25%;
+	border-radius: 15px 50px;
 }
+
+div {
+	text-align: center;
+	}
 
 input[type="number"] {
     text-align: center;
